May God help us

--- a/week_5/Project_1.ipynb
+++ b/week_5/Project_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b7ce81bb",
+   "id": "97690788",
    "metadata": {},
    "source": [
     "# Avoids"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76700bb8",
+   "id": "ac36e956",
    "metadata": {},
    "source": [
     "### Pseudocode\n",
@@ -27,26 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "78e3db3e",
+   "execution_count": 134,
+   "id": "55c51073",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What word would you like to use sir? nigeria\n",
+      "What word would you like to use sir? niger\n",
       "True\n",
-      "<enumerate object at 0x0000020A81A647C0>\n",
       "True\n",
-      "<enumerate object at 0x0000020A81A64D40>\n",
       "True\n",
-      "<enumerate object at 0x0000020A81A647C0>\n",
       "True\n",
-      "<enumerate object at 0x0000020A81A64D40>\n",
-      "False\n",
-      "True\n",
-      "<enumerate object at 0x0000020A81A647C0>\n",
       "False\n",
       "True\n"
      ]
@@ -60,7 +53,6 @@
     "        print(\"False\")\n",
     "    elif c not in forbidden_word :\n",
     "        print(\"True\")\n",
-    "        count\n",
     "    else:\n",
     "        print(\"Error\")\n",
     "print(x)\n"
@@ -69,14 +61,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc1ad759",
+   "id": "d1fd5ccd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "raw",
-   "id": "c1c9153b",
+   "id": "e2ee2a95",
    "metadata": {},
    "source": []
   }
