--- a/week_7/Week 7 - Python-Pandas-Practice.ipynb
+++ b/week_7/Week 7 - Python-Pandas-Practice.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -361,13 +361,13 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pg\n",
+    "import pandas as pd\n",
     " \n",
     "# Define a dictionary containing employee data\n",
     "data = {'Name':['Oyinda', 'Maryam', 'Dumebi', 'Bisola'],\n",
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -415,77 +415,54 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Employee Names</th>\n",
-       "      <th>Years</th>\n",
-       "      <th>Assesment Records</th>\n",
-       "      <th>Points</th>\n",
-       "      <th>Reward</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>name</th>\n",
+       "      <th>degree</th>\n",
+       "      <th>score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Matthew Ade</td>\n",
-       "      <td>25</td>\n",
-       "      <td>125.3</td>\n",
-       "      <td>21</td>\n",
-       "      <td>438.55</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ebube</td>\n",
+       "      <td>MBA</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Angela Adebisi</td>\n",
-       "      <td>15</td>\n",
-       "      <td>77.9</td>\n",
-       "      <td>14</td>\n",
-       "      <td>181.77</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Kamsi</td>\n",
+       "      <td>BCA</td>\n",
+       "      <td>40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Calistus Ndukwe</td>\n",
-       "      <td>10</td>\n",
-       "      <td>144.2</td>\n",
-       "      <td>18</td>\n",
-       "      <td>432.60</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Oyinkan</td>\n",
+       "      <td>M.Tech</td>\n",
+       "      <td>80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Martha Martins</td>\n",
-       "      <td>9</td>\n",
-       "      <td>81.5</td>\n",
-       "      <td>25</td>\n",
-       "      <td>339.58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Victor Sayola</td>\n",
-       "      <td>18</td>\n",
-       "      <td>77.8</td>\n",
-       "      <td>33</td>\n",
-       "      <td>427.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Adamu Bello</td>\n",
-       "      <td>23</td>\n",
-       "      <td>99.5</td>\n",
-       "      <td>24</td>\n",
-       "      <td>398.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Chima</td>\n",
+       "      <td>MBA</td>\n",
+       "      <td>98</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Employee Names  Years  Assesment Records  Points  Reward\n",
-       "0      Matthew Ade     25              125.3      21  438.55\n",
-       "1   Angela Adebisi     15               77.9      14  181.77\n",
-       "2  Calistus Ndukwe     10              144.2      18  432.60\n",
-       "3   Martha Martins      9               81.5      25  339.58\n",
-       "4    Victor Sayola     18               77.8      33  427.90\n",
-       "5      Adamu Bello     23               99.5      24  398.00"
+       "   Unnamed: 0     name  degree  score\n",
+       "0           0    Ebube     MBA     90\n",
+       "1           1    Kamsi     BCA     40\n",
+       "2           2  Oyinkan  M.Tech     80\n",
+       "3           3    Chima     MBA     98"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +477,7 @@
     "df = pd.DataFrame(data)\n",
     "\n",
     "# print excel\n",
-    "data"
+    "df"
    ]
   },
   {
@@ -512,21 +489,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Employee Names       Matthew Ade\n",
-       "Years                         25\n",
-       "Assesment Records          125.3\n",
-       "Points                        21\n",
-       "Reward                    438.55\n",
+       "Unnamed: 0        0\n",
+       "name          Ebube\n",
+       "degree          MBA\n",
+       "score            90\n",
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -577,32 +553,30 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Employee Names</th>\n",
-       "      <th>Years</th>\n",
-       "      <th>Assesment Records</th>\n",
-       "      <th>Points</th>\n",
-       "      <th>Reward</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>name</th>\n",
+       "      <th>degree</th>\n",
+       "      <th>score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Matthew Ade</td>\n",
-       "      <td>25</td>\n",
-       "      <td>125.3</td>\n",
-       "      <td>21</td>\n",
-       "      <td>438.55</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ebube</td>\n",
+       "      <td>MBA</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Employee Names  Years  Assesment Records  Points  Reward\n",
-       "0    Matthew Ade     25              125.3      21  438.55"
+       "   Unnamed: 0   name degree  score\n",
+       "0           0  Ebube    MBA     90"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,106 +832,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Employee Names</th>\n",
-       "      <th>Years</th>\n",
-       "      <th>Assesment Records</th>\n",
-       "      <th>Rewards</th>\n",
-       "      <th>Points</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alegbe Luis</td>\n",
-       "      <td>5</td>\n",
-       "      <td>44.5</td>\n",
-       "      <td>14.83</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Anna Mabuta</td>\n",
-       "      <td>10</td>\n",
-       "      <td>67.4</td>\n",
-       "      <td>44.93</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Karim Kafi</td>\n",
-       "      <td>15</td>\n",
-       "      <td>23.8</td>\n",
-       "      <td>3.97</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Esther Moses</td>\n",
-       "      <td>8</td>\n",
-       "      <td>71.1</td>\n",
-       "      <td>59.25</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Jonah Longe</td>\n",
-       "      <td>4</td>\n",
-       "      <td>50.3</td>\n",
-       "      <td>25.15</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Coins Fagbemi</td>\n",
-       "      <td>20</td>\n",
-       "      <td>63.3</td>\n",
-       "      <td>42.20</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Employee Names  Years  Assesment Records Rewards  Points\n",
-       "0    Alegbe Luis      5               44.5   14.83       2\n",
-       "1    Anna Mabuta     10               67.4   44.93       4\n",
-       "2     Karim Kafi     15               23.8    3.97       1\n",
-       "3   Esther Moses      8               71.1   59.25       5\n",
-       "4    Jonah Longe      4               50.3   25.15       3\n",
-       "5  Coins Fagbemi     20               63.3   42.20       4"
-      ]
-     },
-     "execution_count": 172,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.DataFrame({'Employee Names':['Alegbe Luis', 'Anna Mabuta', 'Karim Kafi', 'Esther Moses', 'Jonah Longe', 'Coins Fagbemi'],\n",
+    "                     \"Years\":[5,10,15,8,4,20], \n",
+    "                     \"Assesment Records\": [44.5,67.4,23.8,71.1,50.3,63.3],\n",
+    "                    })\n",
+    "data\n",
     "points=[]\n",
     "rewards=[]\n",
     "len = 6\n",
@@ -981,7 +866,7 @@
     "    \n",
     "data['Points']=(points)\n",
     "data['Rewards']=(rewards)\n",
-    "data  \n",
+    "\n",
     "\n"
    ]
   },
